# DailyLanguageDose

./: .gitignore  README.md  main.py  pyproject.toml
app/conf/: translations.txt
app/utils/: content_provider.py  email_client.py  template_renderer.py
